--- a/src/app/board-game-collection/board-game-collection.component.html
+++ b/src/app/board-game-collection/board-game-collection.component.html
@@ -1,5 +1,5 @@
 <div class="collection-container">
-  <h1 class="center-text">My Board Game Collection</h1>
+  <h1 class="title center-text">My Board Game Collection</h1>
   <div class="toolbar">
     <button mat-raised-button class="load-button" (click)="loadGames()">Load Games</button>
     <mat-form-field class="input-form">
